# awesome-solara

./: README.md  pyproject.toml
awesome_solara/: dataframe_filtering.py  misc.py
awesome_solara/components/: file_input.py  fileinput_handler.py  misc.py
awesome_solara/multiprocess/: my_task.py  with asyncio.py  with_concurrent.py  with_dask.py
examples/: bokeh_example.py  dialog.py  echarts.py  file_example.py  input_form.py  listitems_globalstate.py  multiple_files_concat.py  plotly_update.py  proplot_example.py  single_fileinput.py  styling_layout.py
examples/example_data/: data_len_10.csv  data_len_15.csv  data_len_20.csv  datagen.py
