[tool.poetry]
name = "awesome-solara"
version = "0.1.0"
description = " Awesome solara showcase and examples"
authors = ["Jochem Smit <jhsmit@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "awesome_solara"}]

[tool.poetry.dependencies]
python = "^3.9"
solara = "^1.8.0"
pandas = "^1.5.3"
jupyter = "^1.0.0"
ipykernel = "^6.21.3"
matplotlib = "^3.7.1"

[tool.flake8]
max-line-length = 100
ignore = "D203"
exclude = [".git", "__pycache__", "build", "dist", "docs"]
max-complexity = 10

[tool.black]
line-length = 100

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pytest = "^7.2.0"
mypy = "^0.991"
pylint = "^2.15.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
